--- a/views/list.ejs
+++ b/views/list.ejs
@@ -14,6 +14,11 @@
     <%- include('nav.html') %>
     <h4 class="text-center mt-4">상세페이지</h4>
     
+  <div class="container input-group mb-2">
+    <input class="form-control">
+    <button class="input-group-append btn btn-danger">검색</button>
+  </div>
+
   <% for (var i = 0; i < posts.length; i++){ %>
   <div class="container mt-1">
 
