--- a/views/nav.html
+++ b/views/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
-      <img src="/img.png" width="50" height="50" alt="">
+      <img src="/gas-station.png" width="50" height="50" alt="">
       To do app</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -29,6 +29,11 @@
       <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link" href="/mypage">My-Page</a>
+        </li>
+      </ul>
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" href="/register">register</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
