--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <title>sign in</title>
+    <title>regist user</title>
   </head>
   <body class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -60,12 +60,8 @@
         </form>
       </div>
     -->
-    <div class="mt-4" class="container">
-      <h2> 로그인 페이지 </h2>
-    </div>
     <div class="mt-4">
-
-      <form action="/login" method="post">
+    <form action="/register" method="post">
         <div class="form-group">
           <label for="formGroupExampleInput">아이디</label>
           <input type="text" class="form-control" id="formGroupExampleInput" placeholder="아이디를 입력하세요" name="id">
